local+cloud integrations api